Fix tez symbol on iOS

--- a/apps/web/src/index.scss
+++ b/apps/web/src/index.scss
@@ -1,5 +1,5 @@
 body {
-  font-family: "Inter";
+  font-family: "Inter", "Segoe UI Symbol", "Noto Sans", "Arial Unicode MS", sans-serif;
   margin: 0;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
